--- a/eventapp/templates/postdetail.html
+++ b/eventapp/templates/postdetail.html
@@ -14,7 +14,7 @@
             <a href="{% url 'index' %}">go to event</a>
           </div>
     <div class="head_write">
-      <p>다른 사람들이 올린 손가락 인증샷을 확인할 수 있습니다! <br>
+      <p>다른 사람들이 올린 손가락 인증샷을 확인할 수 있습니다. <br>
         다양한 이들이 어떻게 L.POINT를 사용하고 있는지 확인해보세요!</p>
     </div>
     <hr>     
